# kadas-stac-plugin

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  FALLBACK_MECHANISM.md  GUIDE.md  README.md  README.md.backup  TESTING.md  admin.py  pyproject.toml  run-network-tests.ps1  test_collection_ids.py  test_network.py
docs/: user-guide.md
resources/: resources.qrc
src/kadas_stac/: __init__.py  conf.py  logger.py  main.py  resources.py  utils.py
src/kadas_stac/api/: base.py  models.py  network.py  proxy_handler.py  qgis_stac_io.py
src/kadas_stac/definitions/: catalog.py
src/kadas_stac/gui/: asset_widget.py  assets_dialog.py  connection_dialog.py  kadas_stac_widget.py
src/kadas_stac/ui/: connection_dialog.ui  kadas_stac_main.ui
test/: README.md  qgis_interface.py  quick_network_test.py  run-network-tests.sh  test_maxar_structure.py  test_network_connectivity.py  test_settings_manager.py  test_stac_api_client_auth.py  test_stac_api_client_functions.py
