[tool.poetry]
name = "kadas-stac-plugin"
version = "1.1.2"
description = "KADAS/QGIS plugin for reading STAC API catalogs"
authors = ["Kartoza <info@kartoza.com>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.4"
mkdocs-git-revision-date-localized-plugin = "^0.11.1"
mkdocs-video = "^1.1.0"
python = "^3.8"
httpx = "^0.20.0"
toml = "^0.10.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
PyQt5 = "^5.15.6"
flask = "^2.0.2"

[tool.qgis-plugin.metadata]
name = "KADAS STAC API Browser"
qgisMinimumVersion = "3.0"
qgisMaximumVersion = "3.99"
icon = "icon.png"
experimental = "False"
deprecated = "False"
homepage = "https://github.com/mlanini/kadas-stac-plugin"
tracker = "https://github.com/mlanini/kadas-stac-plugin/issues"
repository = "https://github.com/mlanini/kadas-stac-plugin"
tags = [
    "kadas",
    "stac",
    "web",
    "raster",
    "cog",
]
category = "plugins, web"
hasProcessingProvider = "no"
about = """\
Adds functionality to search, load and manage STAC API resources inside KADAS and QGIS.
Adapted for KADAS Albireo 2 compatibility.
Originally sponsored by Microsoft.
"""
# changelog: dynamically pulled from the docs/plugin/changelog.txt file
# description: dynamically pulled from the tool.poetry.description section
# version: dynamically pulled from the tool.poetry.version section
# author: dynamically pulled from the tool.poetry.authors section
# email: dynamically pulled from the tool.poetry.authors section

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
